# vlfeat-0.9.21_cmk_install

./: CMakeLists.txt
install_bin_release_ubun2104/include/: version.hpp
install_bin_release_ubun2104/lib/cmake/vlfeat/: vlfeatConfig.cmake  vlfeatConfigVersion.cmake  vlfeatTargets-debug.cmake  vlfeatTargets.cmake
out__RUNTIME_out_VC14/: aib.ilk  mser.ilk  sift.ilk  test_gmm.ilk
out__exe_out_VC14/: aib.exp  aib.lib  mser.exp  mser.lib  sift.exp  sift.lib  test_gmm.exp  test_gmm.lib
out__lib_out_VC14/: vlfeat.exp  vlfeat.ilk  vlfeat.lib
